--- a/index.html
+++ b/index.html
@@ -20,36 +20,36 @@
     style="background-image: url('/icy_background.jpg'); background-position: center; background-size: cover; height: 100vh; ">
     
     <div class="mask" style="background-color: rgba(176, 98, 224, 0.5); height: 100vh;">
-    <div class="container text-bg-transparent text-dark col col-lg-7 rounded">
+    <div class="container text-bg-transparent text-dark col-12 col-lg-7 rounded">
                 <div class="row justify-content-md-center">
-                    <div class="col col-lg-6 text-center mb-4 mt-5 fs-1 fw-bold">
+                    <div class="col-12 col-lg-6 text-center mb-4 mt-5 fs-1 fw-bold">
                         Contact us
                     </div>
                 </div>
                 <form action="">
                     <div class="row justify-content-md-center mt-3">
-                        <div class="col col-lg-10">
+                        <div class="col-12 col-lg-10">
                             <label for="name" class="form-label fw-bold text-white">Name</label>
                             <input type="text" class="form-control" id="name" placeholder="Your Name">
                         </div>
                     </div>
 
                     <div class="row justify-content-md-center mt-3">
-                        <div class="col col-lg-10">
+                        <div class="col-12 col-lg-10">
                             <label for="email" class="form-label fw-bold text-white">Email</label>
                             <input type="email" class="form-control" id="email" placeholder="Your Email">
                         </div>
                     </div>
 
                     <div class="row justify-content-md-center mt-3">
-                        <div class="col col-lg-10">
+                        <div class="col-12 col-lg-10">
                             <label for="message" class="form-label fw-bold text-white">Message</label>
                             <input type="text" class="form-control h-100" id="message" placeholder="Your Message">
                         </div>
                     </div>
 
                     <div class="row justify-content-md-center text-center mt-5">
-                        <div class="col col-lg-10">
+                        <div class="col-12 col-lg-10">
                             <button type="submit" class="btn btn-primary ps-5 pe-5 fw-bold mb-2">Submit</button>
                         </div>
                     </div>
