--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="bg-image"
-    style="background-image: url('/icy_background.jpg'); background-position: center; background-size: cover; height: 100vh; ">
+    style="background-image: url('icy_background.jpg'); background-position: center; background-size: cover; height: 100vh; ">
     
     <div class="mask" style="background-color: rgba(176, 98, 224, 0.5); height: 100vh;">
     <div class="container text-bg-transparent text-dark col-12 col-lg-7 rounded">
